--- a/wrangler.toml
+++ b/wrangler.toml
@@ -6,3 +6,6 @@ compatibility_date = "2024-01-01"
 binding = "DB"
 database_name = "noskrien-ziemu"
 database_id = "3e20662e-4a17-4e39-b4cf-fa543282830e"
+
+[dev]
+port = 8787
